Add serializer configuration to coordinated resource config.